// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate (file paths) custom path to rule docs and rules list generates the documentation 1`] = `
"<!-- begin auto-generated rules list -->

| Name                       |
| :------------------------- |
| [no-foo](no-foo/no-foo.md) |

<!-- end auto-generated rules list -->"
`;

exports[`generate (file paths) custom path to rule docs and rules list generates the documentation 2`] = `
"# test/no-foo

<!-- end auto-generated rule header -->
"
`;

exports[`generate (file paths) custom path to rule docs using function generates the documentation using a function for pathRuleDoc 1`] = `
"<!-- begin auto-generated rules list -->

| Name                             |
| :------------------------------- |
| [no-foo](rules/no-foo/no-foo.md) |

<!-- end auto-generated rules list -->"
`;

exports[`generate (file paths) custom path to rule docs using function generates the documentation using a function for pathRuleDoc 2`] = `
"# test/no-foo

<!-- end auto-generated rule header -->
"
`;

exports[`generate (file paths) empty array of rule lists (happens when CLI option is not passed) falls back to default rules list 1`] = `
"<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->"
`;

exports[`generate (file paths) lowercase README file generates the documentation 1`] = `
"# eslint-plugin-test

## Rules

<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (file paths) missing rule doc with initRuleDocs when initRuleDocs is true creates the rule doc 1`] = `
"# test/no-foo

<!-- end auto-generated rule header -->
"
`;

exports[`generate (file paths) missing rule doc with initRuleDocs when initRuleDocs is true creates the rule doc 2`] = `
"# test/no-bar

<!-- end auto-generated rule header -->

## Options

<!-- begin auto-generated rule options list -->

| Name      |
| :-------- |
| \`option1\` |

<!-- end auto-generated rule options list -->
"
`;

exports[`generate (file paths) missing rule doc, initRuleDocs is true, and with ruleDocSectionInclude creates the rule doc including the mandatory section 1`] = `
"# test/no-foo

<!-- end auto-generated rule header -->
"
`;

exports[`generate (file paths) missing rule doc, initRuleDocs is true, and with ruleDocSectionInclude creates the rule doc including the mandatory section 2`] = `
"# test/no-bar

<!-- end auto-generated rule header -->

## Examples

## Options

<!-- begin auto-generated rule options list -->

| Name      |
| :-------- |
| \`option1\` |

<!-- end auto-generated rule options list -->
"
`;

exports[`generate (file paths) multiple rules lists generates the documentation 1`] = `
"<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->"
`;

exports[`generate (file paths) multiple rules lists generates the documentation 2`] = `
"<!-- begin auto-generated rules list -->

| Name                              |
| :-------------------------------- |
| [no-foo](../docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->"
`;

exports[`generate (file paths) multiple rules lists generates the documentation 3`] = `
"<!-- begin auto-generated rules list -->

| Name                |
| :------------------ |
| [no-foo](no-foo.md) |

<!-- end auto-generated rules list -->"
`;
